14 April 2011: Wouter
	- configure created with newer autoconf 2.66.

12 April 2011: Wouter
	- bug#378: Fix that configure checks for ldns_get_random presence.

8 April 2011: Wouter
	- iana portlist updated.
	- queries with CD flag set cause DNSSEC validation, but the answer is
	  not withheld if it is bogus.  Thus, unbound will retry if it is bad
	  and curb the TTL if it is bad, thus protecting the cache for use by
	  downstream validators.
	- val-override-date: -1 ignores dates entirely, for NTP usage.

29 March 2011: Wouter
	- harden-below-nxdomain: changed so that it activates when the
	  cached nxdomain is dnssec secure.  This avoids backwards
	  incompatibility because those old servers do not have dnssec.

24 March 2011: Wouter
	- iana portlist updated.
	- release 1.4.9.
	- trunk is 1.5.0

17 March 2011: Wouter
	- bug#370: new unbound.spec for CentOS 5.x from Harold Jones.
	  Applied but did not do the --disable-gost.

10 March 2011: Wouter
	- tag 1.4.9 release candidate 1 created.

3 March 2011: Wouter
	- updated ldns to today.

1 March 2011: Wouter
	- Fix no ADflag for NXDOMAIN in NSEC3 optout. And wildcard in optout.
	- give config parse error for multiple names on a stub or forward zone.
	- updated ldns tarball to 1.6.9(todays snapshot).

24 February 2011: Wouter
	- bug #361: Fix, time.elapsed variable not reset with stats_noreset.

23 February 2011: Wouter
	- iana portlist updated.
	- common.sh to version 3.

18 February 2011: Wouter
	- common.sh in testdata updated to version 2.

15 February 2011: Wouter
	- Added explicit note on unbound-anchor usage:
	  Please note usage of unbound-anchor root anchor is at your own risk
	  and under the terms of our LICENSE (see that file in the source).

11 February 2011: Wouter
	- iana portlist updated.
	- tpkg updated with common.sh for common functionality.

7 February 2011: Wouter
	- Added regression test for addition of a .net DS to the root, and
	  cache effects with different TTL for glue and DNSKEY.